@@ -211,3 +211,5 @@ issue 226: when ItemAtlas scheduled missing texture for texture, it still crashe
 issue 227: ItemFactory's template system was broken; fixed on 06.07.2020 by uuk
 issue 228: logger was prefixing every part with time, not only the front; fixed on 06.07.2020 by uuk
 issue 229: Player.teleport() was not updating G.world's active dimension; fixed on 06.07.2020 by uuk
+issue 231: alpha rendering of blocks was broken; fixed on 09.07.2020 by uuk
+issue 232: RenderingHelper's alpha on/off functions were not working correctly; fixed on 09.07.2020 by uuk
