@@ -1,41 +1,41 @@
 [
-  "minecraft:block/acacia_leaves",
-  "minecraft:block/birch_leaves",
-  "minecraft:block/dark_oak_leaves",
-  "minecraft:block/jungle_leaves",
-  "minecraft:block/oak_leaves",
-  "minecraft:block/spruce_leaves",
-  "minecraft:block/white_stained_glass",
-  "minecraft:block/orange_stained_glass",
-  "minecraft:block/magenta_stained_glass",
-  "minecraft:block/light_blue_stained_glass",
-  "minecraft:block/yellow_stained_glass",
-  "minecraft:block/lime_stained_glass",
-  "minecraft:block/pink_stained_glass",
-  "minecraft:block/gray_stained_glass",
-  "minecraft:block/light_gray_stained_glass",
-  "minecraft:block/cyan_stained_glass",
-  "minecraft:block/purple_stained_glass",
-  "minecraft:block/blue_stained_glass",
-  "minecraft:block/brown_stained_glass",
-  "minecraft:block/green_stained_glass",
-  "minecraft:block/red_stained_glass",
-  "minecraft:block/black_stained_glass",
-  "minecraft:block/glass",
-  "minecraft:block/white_stained_glass_pane",
-  "minecraft:block/orange_stained_glass_pane",
-  "minecraft:block/magenta_stained_glass_pane",
-  "minecraft:block/light_blue_stained_glass_pane",
-  "minecraft:block/yellow_stained_glass_pane",
-  "minecraft:block/lime_stained_glass_pane",
-  "minecraft:block/pink_stained_glass_pane",
-  "minecraft:block/gray_stained_glass_pane",
-  "minecraft:block/light_gray_stained_glass_pane",
-  "minecraft:block/cyan_stained_glass_pane",
-  "minecraft:block/purple_stained_glass_pane",
-  "minecraft:block/blue_stained_glass_pane",
-  "minecraft:block/brown_stained_glass_pane",
-  "minecraft:block/green_stained_glass_pane",
-  "minecraft:block/red_stained_glass_pane",
-  "minecraft:block/black_stained_glass_pane"
+  "minecraft:acacia_leaves",
+  "minecraft:birch_leaves",
+  "minecraft:dark_oak_leaves",
+  "minecraft:jungle_leaves",
+  "minecraft:oak_leaves",
+  "minecraft:spruce_leaves",
+  "minecraft:white_stained_glass",
+  "minecraft:orange_stained_glass",
+  "minecraft:magenta_stained_glass",
+  "minecraft:light_blue_stained_glass",
+  "minecraft:yellow_stained_glass",
+  "minecraft:lime_stained_glass",
+  "minecraft:pink_stained_glass",
+  "minecraft:gray_stained_glass",
+  "minecraft:light_gray_stained_glass",
+  "minecraft:cyan_stained_glass",
+  "minecraft:purple_stained_glass",
+  "minecraft:blue_stained_glass",
+  "minecraft:brown_stained_glass",
+  "minecraft:green_stained_glass",
+  "minecraft:red_stained_glass",
+  "minecraft:black_stained_glass",
+  "minecraft:glass",
+  "minecraft:white_stained_glass_pane",
+  "minecraft:orange_stained_glass_pane",
+  "minecraft:magenta_stained_glass_pane",
+  "minecraft:light_blue_stained_glass_pane",
+  "minecraft:yellow_stained_glass_pane",
+  "minecraft:lime_stained_glass_pane",
+  "minecraft:pink_stained_glass_pane",
+  "minecraft:gray_stained_glass_pane",
+  "minecraft:light_gray_stained_glass_pane",
+  "minecraft:cyan_stained_glass_pane",
+  "minecraft:purple_stained_glass_pane",
+  "minecraft:blue_stained_glass_pane",
+  "minecraft:brown_stained_glass_pane",
+  "minecraft:green_stained_glass_pane",
+  "minecraft:red_stained_glass_pane",
+  "minecraft:black_stained_glass_pane"
 ]
