@@ -1206,3 +1206,5 @@ sstarted these clone on 12th of July, 2019
 
 [uuk]: added ToolTips to items which are translated (if possible), can be colored, ...
 [uuk]: added corresponding extension functions to Item-class and ItemFactory-system
+[uuk]: fixed alpha rendering for blocks (issue 231)
+[uuk]: fixed alpha functions of RenderingHelper
