@@ -55,6 +55,11 @@ information on development:
 changelog of snapshot [next] (theme: )
     - added tooltip system for items with their backends at Item-class and factory methods at ItemFactory
 
+    fixed issues:
+        from previous snapshot:
+            - alpha rendering for blocks was broken
+            - RenderingHelper's alpha on/off functions were not working
+
 
 changelog of snapshot 20w28a released on 08.07.2020 (theme: fixing stuff & upgrading base to 1.16)
     updated resources to 1.16 and added (some) content of the update
